Fix whitespace issues